# intranet-share

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  consts.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/core/: consts.rs  handle.rs  mod.rs  models.rs  receiver.rs  sender.rs  utils.rs
src-tauri/src/disc/: discover.rs  mod.rs  models.rs
src/components/: DeviceManager.vue  FileSelector.vue  LocalInfoBar.vue  TransferSection.vue
src/store/: index.ts
src/styles/: common.css
src/types/: index.ts
src/views/: Main.vue
