[package]
name = "intranet-share"
version = "0.1.0"
description = "A Tauri App"
authors = ["choux"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "intranet_share_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
blake3 = "1.8.3"
mdns-sd = "0.17.2"
sys-info = "0.9.1"
log = "0.4.29"
tauri-plugin-dialog = "2"
tokio-util = "0.7.18"
tauri-plugin-log = "2"
uuid = {version = "1.20.0", features = ["v4"] }
dirs = "6.0.0"
